# openhems-sample

./: .dockerignore  .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  features.md  listExeFiles.sh  openhems.yaml  pylint_test.py  pyproject.toml  readme.md  requirements.txt  setup.py  testAPI.py  test_venv.py  test_venv.sh  todo.md
.devcontainer/: devcontainer.json
.github/workflows/: codecov.yml  docker_push.yaml  docker_push.yml  docker_push2.yml  docker_push_test.yml  pylint.yml  python-package-conda.yml  python-publish.yml
config/: config.inc.olimex.sh  config.inc.sh  config_emhass.yaml  configuration.yaml  dashboards.yaml  openhems.secret.yaml  openhems.yaml  openhems_fake4tests.yaml  openhems_test_emhass.yaml  template.yaml
data/: edf.yaml  keys_en.yaml  keys_fr.yaml  openhems_default.yaml  openhems_default_docker.yaml  openhems_tooltips_en.yaml  openhems_tooltips_fr.yaml
doc/: install.md
docs/source/: api.rst  conf.py  configure.rst  configure.tst  configure_nodes.rst  index.rst  installation.rst  installation_from_scratch.rst  intro.rst  usage.rst
emhass/: config_emhass.yaml  secrets_emhass.yaml
img/: openhems.css  params.js  yamlparams.js
reverse-proxy-https/: nginx.conf  reverse-proxy-ssl.conf
scripts/: autoupdate.py  autoupdate.sh  backup.sh  config.sh  deploy.sh  emhass.sh  files.lst  functions.sh  getDataEDF.py  home-assistant.sh  init_server.sh  installFromScratch.sh  openhems.docker.inc.sh  openhems.inc.sh  openhems.sh  openhems.standalone.inc.sh  openhemsDocker.sh  pylint_test.py  test_docker.sh  vpn_client.py  vpn_server.py
scripts/emhass/: deferrable.py  emhass.sh  test_emhass.py
src/: energy_strategy.py  home_assistant_api.py  main.py  network.py  openhems_node.py  schedule.py  server.py  test.py  testAPI.py  web.py
src/energy_strategy/: energy_strategy.py  hybridinverter_strategy.py  offgrid_strategy.py  offpeak_strategy.py  solarbased_strategy.py  solarnosell_strategy.py  sourceinverter_strategy.py
src/modules/energy_strategy/: EDFTempoPricing.py  PVOptimizer.py  __init__.py  energy_strategy.py  hybridinverter_strategy.py  offgrid_strategy.py  offpeak_manager.py  offpeak_strategy.py  offpeakvariable_strategy.py  solarbased_strategy.py  sourceinverter_strategy.py
src/modules/network/: __init__.py  feeder.py  network.py  node.py
src/modules/network/driver/: home_assistant_api.py
src/modules/web/: __init__.py  schedule.py  web.py
src/modules/web/templates/: panel.html  panel.jinja2
src/openhems/: __init__.py  check_homeassisant_api.py  check_homeassistant_api.py  check_homeassistant_api.sh  config.example.yaml  config_flow.py  expose_service_sync.yaml  main.py  manifest.json  server.py  server_vpn.py  start.sh  test_homeassisant_api.py  unix_socket.py  unix_socket_action.py  unix_socket_client.py  unix_socket_server.py  util.py
src/openhems/controllers/: balancing_controller.py  controller.py  peak_shaving_controller.py  scheduller.py  self_consumption_controller.py
src/openhems/data/: ennergy_supplier.yaml  keys_en.yaml  keys_fr.yaml  openhems.schema.yaml  openhems_default.yaml  openhems_tooltips_en.yaml  openhems_tooltips_fr.yaml
src/openhems/modules/: __init__.py
src/openhems/modules/contract/: __init__.py  contract.py  generic_contract.py  rte_contract.py
src/openhems/modules/energy_strategy/: __init__.py  emhass_strategy.py  energy_strategy.py  hybridinverter_strategy.py  offgrid_strategy.py  offpeak_strategy.py  optimization_algorithm.py  range_strategy.py  simulated_annealing_algo.py  simulated_annealing_strategy.py  solarbased_strategy.py  solarnosell_strategy.py  sourceinverter_strategy.py  switchoff_strategy.py
src/openhems/modules/energy_strategy/driver/: emhass_adapter.py
src/openhems/modules/energy_strategy/driver/data/: config_emhass.jinja2.yaml
src/openhems/modules/network/: __init__.py  feedback_switch.py  feeder.py  homestate_updater.py  inoutnode.py  network.py  network_helper.py  node.py  outnode.py  schedule.py
src/openhems/modules/network/driver/: domoticz_api.py  fake_network.py  home_assistant_api.py
src/openhems/modules/util/: __init__.py  cast_utility.py  configuration_manager.py  json.py  logging.py  notification_manager.py  project_configuration.py  recorder.py  time.py
src/openhems/modules/web/: .pylintrc  Dashboard.py  __init__.py  driver_vpn.py  schedule.py  streamlit_app.py  streamlit_test.py  unix_socket.py  web.py  web_pyramid.py  web_streamlit.py
src/openhems/modules/web/css/: openhems.css
src/openhems/modules/web/js/: params.js
src/openhems/modules/web/pages/: 01_Dashboard.py  02_Configuration.py  03_VPN.py  04_About.py
src/openhems/modules/web/templates/: about.jinja2  panel.jinja2  params.framework.jinja2  params.jinja2  yamlparams.framework.jinja2
src/templates/: panel.html  panel.jinja2
systemd/: openhems.service
tests/: __init__.py  test_annealing_strategy.py  test_contract_module.py  test_emhass_adapter.py  test_feedbackswitch.py  test_offpeak_strategy.py  test_openhems.py  test_server.py  test_solarnosell_strategy.py  test_streamlit.py  test_streamlit_dashboard.py  test_util_module.py  utils.py
tests/data/: contract_rtetempo_data.yaml  openhems.yaml  openhems_fake4tests.yaml  openhems_fake4tests_annealing.yaml  openhems_fake4tests_feedbackswitch.yaml  openhems_fake4tests_missingKeyParams.yaml  openhems_fake4tests_solarnosell.yaml  openhems_fake4tests_solarnosell_withoutpublicpowergrid.yaml  openhems_test_emhass.yaml  openhems_test_save.tmp.yaml  openhems_test_save.yaml
tests/utils/: __init__.py  utils.py
