[project]
name = "openhems"
version = "0.1.0"
authors = [
	{ name="OpenHomeSystem", email="contact@openhomesystem.com" },
]
maintainers = [
	{ name="Albéric de la Crochais", email="alberic.delacrochais@protonmail.com" }
]
description = "A sample Home Energy Managment System based on Home-Assistant"
readme = "readme.md"
requires-python = ">=3.8"
# classifiers = [
#    "Programming Language :: Python :: 3",
#    "License :: GPL-3.0-or-later",
#    "Operating System :: Linux",
# ]
dynamic = []


[project.urls]
Homepage = "https://openhomesystem.com"
Issues = "https://github.com/abriotde/openhems-sample/issues"

[build-system]
requires = ["pandas", "pyyaml", "pyramid", "pyramid-jinja2"]
# build-backend = "openhems.build"

[tool.coverage.run]
branch = true
source = ["src/openhems", "tests"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"
